// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card snapshots > css mode snapshot 1`] = `
"import React from 'react';
import styles from './Card.module.css';
export type CardVariant = 'default' | 'hoverable' | 'clickable';
export type CardSize    = 'sm' | 'md' | 'lg';

export interface CardProps {
  variant?:   CardVariant;
  size?:      CardSize;
  title?:     string;
  children:   React.ReactNode;
  onClick?:   () => void;
  className?: string;
  href?:      string;
}

export const CardRoot = ({
  variant = 'default',
  size = 'md',
  children,
  onClick,
  className,
  href,
}: CardProps) => {
  const isClickable = variant === 'clickable' || !!onClick || !!href;
  
  const cls = [
    styles.card,
    styles[\`card--\${variant}\`],
    styles[\`card--\${size}\`],
    isClickable && styles['card--clickable'],
    className,
  ].filter(Boolean).join(' ');

  const handleKeyDown = (e: React.KeyboardEvent) => {
    if (isClickable && (e.key === 'Enter' || e.key === ' ')) {
      e.preventDefault();
      onClick?.();
      if (href) window.location.href = href;
    }
  };

  const Component = href ? 'a' : isClickable ? 'button' : 'article';

  return (
    <Component
      className={cls}
      onClick={onClick}
      href={href}
      role={href ? undefined : isClickable ? 'button' : 'article'}
      tabIndex={isClickable ? 0 : undefined}
      onKeyDown={isClickable ? handleKeyDown : undefined}
    >
      {children}
    </Component>
  );
};

export const CardHeader = ({ children, className }: { children: React.ReactNode; className?: string }) => (
  <div className={[styles.header, className].filter(Boolean).join(' ')}>{children}</div>
);

export const CardTitle = ({ children, className }: { children: React.ReactNode; className?: string }) => (
  <h3 className={[styles.title, className].filter(Boolean).join(' ')}>{children}</h3>
);

export const CardContent = ({ children, className }: { children: React.ReactNode; className?: string }) => (
  <div className={[styles.content, className].filter(Boolean).join(' ')}>{children}</div>
);

export const CardFooter = ({ children, className }: { children: React.ReactNode; className?: string }) => (
  <div className={[styles.footer, className].filter(Boolean).join(' ')}>{children}</div>
);

export const Card = Object.assign(CardRoot, {
  Header: CardHeader,
  Title: CardTitle,
  Content: CardContent,
  Footer: CardFooter,
});

Card.displayName = 'Card';
CardRoot.displayName = 'Card.Root';
CardHeader.displayName = 'Card.Header';
CardTitle.displayName = 'Card.Title';
CardContent.displayName = 'Card.Content';
CardFooter.displayName = 'Card.Footer';
"
`;

exports[`Card snapshots > css mode snapshot 2`] = `
"/* Generated by Crucible — edit freely, re-generate with --force */

.card {
  display:        flex;
  flex-direction: column;
  background:     var(--color-surface);
  border:         1.5px solid var(--color-border);
  border-radius:  var(--radius-lg);
  color:          var(--color-text);
  font-family:    var(--font-family);
  overflow:       hidden;
  text-align:     left;
  width:          100%;
  padding:        0;
  margin:         0;
  text-decoration: none;
}

.card:focus-visible {
  outline:        2px solid var(--color-primary);
  outline-offset: 3px;
}

/* Sizes */
.card--sm { max-width: 300px; }
.card--md { max-width: 450px; }
.card--lg { max-width: 600px; }

/* Variants */
.card--hoverable:hover {
  border-color: var(--color-primary);
  box-shadow:   0 4px 12px rgba(0, 0, 0, 0.05);
}

.card--clickable {
  cursor: pointer;
  transition: transform 0.15s ease, box-shadow 0.15s ease, border-color 0.15s ease;
}

.card--clickable:hover {
  border-color: var(--color-primary);
  box-shadow:   0 8px 24px rgba(0, 0, 0, 0.1);
  transform:    translateY(-2px);
}

.card--clickable:active {
  transform:    translateY(0);
}

.title {
  margin:      0;
  padding:     calc(var(--spacing-unit) * 4);
  font-size:   1.1em;
  font-weight: 600;
  border-bottom: 1px solid var(--color-border);
}

.content {
  padding: calc(var(--spacing-unit) * 4);
}
"
`;

exports[`Card snapshots > css mode snapshot 3`] = `
"import type { Meta, StoryObj } from '@storybook/react';
import React, { useState } from 'react';
import { Card } from './Card';

const meta: Meta<typeof Card> = {
  title: 'Crucible/Card',
  component: Card,
  parameters: { layout: 'centered' },
  argTypes: {
    variant: { control: 'select', options: ['default', 'hoverable', 'clickable'] },
    size:    { control: 'select', options: ['sm', 'md', 'lg'] },
  },
};
export default meta;
type Story = StoryObj<typeof Card>;

export const Default: Story = {
  render: (args) => (
    <Card {...args}>
      <Card.Header>
        <h3 style={{ margin: 0 }}>Card Title</h3>
      </Card.Header>
      <Card.Content>
        This is a default card with some content inside it.
      </Card.Content>
    </Card>
  ),
};

export const Hoverable: Story = {
  args: { variant: 'hoverable' },
  render: (args) => (
    <Card {...args}>
      <Card.Header>
        <h3 style={{ margin: 0 }}>Hoverable Card</h3>
      </Card.Header>
      <Card.Content>
        This card changes its border color and shadow on hover.
      </Card.Content>
    </Card>
  ),
};

export const Clickable: Story = {
  args: { 
    variant: 'clickable',
    onClick: () => alert('Card clicked!'),
  },
  render: (args) => (
    <Card {...args}>
      <Card.Header>
        <h3 style={{ margin: 0 }}>Clickable Card</h3>
      </Card.Header>
      <Card.Content>
        This card acts like a button and has an active state.
      </Card.Content>
    </Card>
  ),
};

export const Link: Story = {
  args: { 
    variant: 'clickable',
    href: 'https://example.com',
  },
  render: (args) => (
    <Card {...args}>
      <Card.Header>
        <h3 style={{ margin: 0 }}>Link Card</h3>
      </Card.Header>
      <Card.Content>
        This card acts like an anchor tag.
      </Card.Content>
    </Card>
  ),
};
"
`;

exports[`Card snapshots > tailwind mode snapshot 1`] = `
"import React from 'react';

const variantClasses: Record<string, string> = {
  default: 'bg-[var(--color-surface)] border-[var(--color-border)]',
  hoverable: 'bg-[var(--color-surface)] border-[var(--color-border)] hover:shadow-lg',
  clickable: 'bg-[var(--color-surface)] border-[var(--color-border)] cursor-pointer hover:shadow-lg',
 };

const sizeClasses: Record<string, string> = {
  sm: 'p-4',
  md: 'p-6',
  lg: 'p-8',
};

export type CardVariant = 'default' | 'hoverable' | 'clickable';
export type CardSize    = 'sm' | 'md' | 'lg';

export interface CardProps {
  variant?:   CardVariant;
  size?:      CardSize;
  title?:     string;
  children:   React.ReactNode;
  onClick?:   () => void;
  className?: string;
  href?:      string;
}

export const CardRoot = ({
  variant = 'default',
  size = 'md',
  children,
  onClick,
  className,
  href,
}: CardProps) => {
  const isClickable = variant === 'clickable' || !!onClick || !!href;
  
  const cls = [
    'rounded-[var(--radius-lg)] border-1.5 transition-all text-left w-full block',
    'focus-visible:outline focus-visible:outline-2 focus-visible:outline-[var(--color-primary)] focus-visible:outline-offset-2',
    variantClasses[variant],
    sizeClasses[size],
    className,
  ].filter(Boolean).join(' ');

  const handleKeyDown = (e: React.KeyboardEvent) => {
    if (isClickable && (e.key === 'Enter' || e.key === ' ')) {
      e.preventDefault();
      onClick?.();
      if (href) window.location.href = href;
    }
  };

  const Component = href ? 'a' : isClickable ? 'button' : 'article';

  return (
    <Component
      className={cls}
      onClick={onClick}
      href={href}
      role={href ? undefined : isClickable ? 'button' : 'article'}
      tabIndex={isClickable ? 0 : undefined}
      onKeyDown={isClickable ? handleKeyDown : undefined}
    >
      {children}
    </Component>
  );
};

export const CardHeader = ({ children, className }: { children: React.ReactNode; className?: string }) => (
  <div className={['mb-4', className].filter(Boolean).join(' ')}>{children}</div>
);

export const CardTitle = ({ children, className }: { children: React.ReactNode; className?: string }) => (
  <h3 className={['font-bold text-lg mb-2 text-[var(--color-text)]', className].filter(Boolean).join(' ')}>{children}</h3>
);

export const CardContent = ({ children, className }: { children: React.ReactNode; className?: string }) => (
  <div className={['text-[var(--color-text-muted)]', className].filter(Boolean).join(' ')}>{children}</div>
);

export const CardFooter = ({ children, className }: { children: React.ReactNode; className?: string }) => (
  <div className={['mt-4 flex items-center', className].filter(Boolean).join(' ')}>{children}</div>
);

export const Card = Object.assign(CardRoot, {
  Header: CardHeader,
  Title: CardTitle,
  Content: CardContent,
  Footer: CardFooter,
});

Card.displayName = 'Card';
CardRoot.displayName = 'Card.Root';
CardHeader.displayName = 'Card.Header';
CardTitle.displayName = 'Card.Title';
CardContent.displayName = 'Card.Content';
CardFooter.displayName = 'Card.Footer';
"
`;

exports[`Card snapshots > tailwind mode snapshot 2`] = `
"import type { Meta, StoryObj } from '@storybook/react';
import React, { useState } from 'react';
import { Card } from './Card';

const meta: Meta<typeof Card> = {
  title: 'Crucible/Card',
  component: Card,
  parameters: { layout: 'centered' },
  argTypes: {
    variant: { control: 'select', options: ['default', 'hoverable', 'clickable'] },
    size:    { control: 'select', options: ['sm', 'md', 'lg'] },
  },
};
export default meta;
type Story = StoryObj<typeof Card>;

export const Default: Story = {
  render: (args) => (
    <Card {...args}>
      <Card.Header>
        <h3 style={{ margin: 0 }}>Card Title</h3>
      </Card.Header>
      <Card.Content>
        This is a default card with some content inside it.
      </Card.Content>
    </Card>
  ),
};

export const Hoverable: Story = {
  args: { variant: 'hoverable' },
  render: (args) => (
    <Card {...args}>
      <Card.Header>
        <h3 style={{ margin: 0 }}>Hoverable Card</h3>
      </Card.Header>
      <Card.Content>
        This card changes its border color and shadow on hover.
      </Card.Content>
    </Card>
  ),
};

export const Clickable: Story = {
  args: { 
    variant: 'clickable',
    onClick: () => alert('Card clicked!'),
  },
  render: (args) => (
    <Card {...args}>
      <Card.Header>
        <h3 style={{ margin: 0 }}>Clickable Card</h3>
      </Card.Header>
      <Card.Content>
        This card acts like a button and has an active state.
      </Card.Content>
    </Card>
  ),
};

export const Link: Story = {
  args: { 
    variant: 'clickable',
    href: 'https://example.com',
  },
  render: (args) => (
    <Card {...args}>
      <Card.Header>
        <h3 style={{ margin: 0 }}>Link Card</h3>
      </Card.Header>
      <Card.Content>
        This card acts like an anchor tag.
      </Card.Content>
    </Card>
  ),
};
"
`;
